tests/compile-fail/suzu_from_generic_type_param.rs
use suzunari_error::*;

#[suzunari_error]
#[suzu(display("generic from error"))]
struct GenericFromError<E: core::fmt::Debug + core::fmt::Display + 'static> {
    #[suzu(from)]
    source: E,
}

fn main() {}
