tests/compile-fail/suzu_from_generic_type_param.stderr
error: `from` cannot be used on fields with generic type parameters; use `#[suzu(source(from(T, DisplayError::new)))]` with an explicit `DisplayError<T>` field type, or implement `From` manually
 --> tests/compile-fail/suzu_from_generic_type_param.rs:6:12
  |
6 |     #[suzu(from)]
  |            ^^^^
